--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -1,3 +1,8 @@
 <h1>Welcome To Tea Time!</h1>
 
 <%= button_to "Create New Account", signup_path, method: :get %>
+<% if logged_in? %>
+    <%= button_to "Logout", sessions_path, method: :delete %>
+  <% else %>
+    <%= button_to "Login", login_path, method: :get %>
+<% end %>
