--- a/app/views/teas/show.html.erb
+++ b/app/views/teas/show.html.erb
@@ -1,4 +1,9 @@
-
+  <% if logged_in? %>
+      <%= button_to "Logout", sessions_path, method: :delete %>
+    <% else %>
+      <%= button_to "Login", login_path, method: :get %>
+  <% end %>
+  
 <h1><%=@tea.title%></h1>
 
 <ul>Description:<%=@tea.description%></ul>
