--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -8,11 +8,18 @@
 
         
     }
+    .tea-container {
+      margin-top: 50px;
+    }
+
+    .tea-title {
+      margin-top: 300px;
+    }
   </style>
 
 
   <body>
-    <div class="gif-wrapper"></div>  
+    <div class="home-pic"></div>  
 
     <%# <h1 class="header"> Welcome To Tea Time! </h1> %>
     
@@ -20,29 +27,29 @@
   
     <%# <%= button_to "Enter", "/teas", method: :get, :class => "btn btn-primary" %>
     
-      <!--<% if logged_in? %>
-      <%= link_to "Logout", sessions_path, method: :delete %>
+      <% if logged_in? %>
+      <%= link_to "Logout", sessions_path, method: :delete, class: "text-decoration-none"  %>
     <% else %>
       <%= form_tag sessions_path do %>
-      <%= label_tag "Username" %>
-      <%= text_field_tag :username, nil, placeholder: "Username" %>
+      <%= label_tag "Email" %>
+      <%= text_field_tag :email, nil, placeholder: "Email" %>
       <%= label_tag "Password" %>
       <%= password_field_tag :password, nil, placeholder: "Password" %>
       <%= submit_tag "Log In"%>
     <% end %>
-    <%= link_to "Sign Up", "users/new", method: :get %>
+    <%= link_to "Sign Up", "users/new", method: :get, class: "text-decoration-none"  %>
   <% end %>
 
 
-<%= link_to "Teas", teas_path, method: :get %> 
+<%= link_to "Teas", teas_path, method: :get, class: "text-decoration-none" %> 
 
  <% if current_user != nil%>
-  <%= link_to "My Subscriptions", "/users/#{current_user.id}/subscriptions", method: :get %>
+  <%= link_to "My Subscriptions", "/users/#{current_user.id}/subscriptions", method: :get, class: "text-decoration-none"  %>
 <% end %>
 
-<h1> Teas Selection! </h1>
-<div class="container">
-  <% @teas.each do |tea|%>
+
+<h1 class="tea-title"> Teas Selection! </h1>
+ <% @teas.each do |tea|%>
     <%=tea.title%>
     <%=tea.description%>
     Temp<%=tea.temperature_f%>
@@ -51,8 +58,8 @@
     <% if current_user != nil %>
       <%= link_to "Add Subscription", "/users/#{current_user.id}/subscriptions/add/tea/#{tea.id}" %>
     <% end %>
-  <% end %> %>-->
-</div>
+  <% end  %>
+
 
   </body>
 </html>
