--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,7 @@
 
-
-
   <%= form_for @user do |f| %>
-    <%= f.label :username %>
-    <%= f.text_field :username, placeholder: "Username" %><br>
+    <%= f.label :email %>
+    <%= f.text_field :email, placeholder: "email" %><br>
     <%= f.label :password %>
     <%= f.password_field :password, placeholder: "Password" %><br>
     <%= f.label :password_confirmation %>
