--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -27,20 +27,8 @@
   
     <%# <%= button_to "Enter", "/teas", method: :get, :class => "btn btn-primary" %>
     
-      <% if logged_in? %>
-      <%= link_to "Logout", sessions_path, method: :delete, class: "text-decoration-none"  %>
-    <% else %>
-      <%= form_tag sessions_path do %>
-      <%= label_tag "Email" %>
-      <%= text_field_tag :email, nil, placeholder: "Email" %>
-      <%= label_tag "Password" %>
-      <%= password_field_tag :password, nil, placeholder: "Password" %>
-      <%= submit_tag "Log In"%>
-    <% end %>
-    <%= link_to "Sign Up", "users/new", method: :get, class: "text-decoration-none"  %>
-  <% end %>
 
-
+<%= link_to "Home", "/", method: :get, class: "text-decoration-none" %>
 <%= link_to "Teas", teas_path, method: :get, class: "text-decoration-none" %> 
 
  <% if current_user != nil%>
@@ -48,17 +36,32 @@
 <% end %>
 
 
+  <% if logged_in? %>
+    <%= link_to "Logout", sessions_path, method: :delete, class: "text-decoration-none"  %>
+  <% else %>
+    <%= link_to "Log In", sessions_path, method: :new, class: "text-decoration-none"  %>
+  <% end %>
+
+    <%= link_to "Sign Up", "users/new", method: :get, class: "text-decoration-none"  %>
+
+
+
 <h1 class="tea-title"> Teas Selection! </h1>
  <% @teas.each do |tea|%>
-    <%=tea.title%>
-    <%=tea.description%>
-    Temp<%=tea.temperature_f%>
-    Brew time in seconds<%=tea.brew_time_seconds%>
-    <p>$<%=tea.price_usd%></p>
-    <% if current_user != nil %>
-      <%= link_to "Add Subscription", "/users/#{current_user.id}/subscriptions/add/tea/#{tea.id}" %>
-    <% end %>
-  <% end  %>
+  <div class="card" style="width: 18rem;">
+    <%= image_tag ("sencha.jpeg"), width: 10, class: "card-img-top" %>
+    <div class="card-body">
+      <h5 class="card-title">
+        <p><%=tea.title%>   |   $<%=tea.price_usd%></p>
+      </h5>
+      <p class="card-text"><%=tea.description%></p>
+        <% if current_user != nil %>
+          <%= button_to "Add Subscription", "/users/#{current_user.id}/subscriptions/add/tea/#{tea.id}" %>
+        <% end %>
+    </div>
+  </div>
+<% end %>
+
 
 
   </body>
