--- a/app/views/teas/show.html.erb
+++ b/app/views/teas/show.html.erb
@@ -1,12 +1,3 @@
-  <% if logged_in? %>
-      <%= link_to "Logout", sessions_path, method: :delete %>
-    <% else %>
-      <%= link_to "Login", login_path, method: :get %>
-  <% end %>
-  
-<%= link_to "Home", user_path(current_user)%>
-<%= link_to "Teas", teas_path, method: :get %>
-<%= link_to "My Subscriptions", "/users/#{@user.id}/subscriptions", method: :get %>
 
 
 <h1><%=@tea.title%></h1>
@@ -15,4 +6,15 @@
 <ul>Brew Temperature <%=@tea.temperature_f%> Farenheit</ul>
 <ul>Brew time: <%=@tea.brew_time_seconds%> Seconds</ul>
 <ul>$<%=@tea.price_usd%></ul>
+
+<div class="card" style="width: 18rem;">
+  <%# <%= image_tag ("sencha.jpeg"), width: 10, class: "card-img-top"%> %>
+  <div class="card-body">
+    <h5 class="card-title">
+      <%=@tea.title%>
+    </h5>
+    <p class="card-text"><%=@tea.description%></p>
+
+  </div>
+</div>
 
