Add grid styling to tea cards

--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -44,24 +44,26 @@
 
     <%= link_to "Sign Up", "users/new", method: :get, class: "text-decoration-none"  %>
 
+    <h1 class="tea-title"> Teas Selection! </h1>
 
-
-<h1 class="tea-title"> Teas Selection! </h1>
- <% @teas.each do |tea|%>
-  <div class="card" style="width: 18rem;">
-    <%= image_tag ("sencha.jpeg"), width: 10, class: "card-img-top" %>
-    <div class="card-body">
-      <h5 class="card-title">
-        <p><%=tea.title%>   |   $<%=tea.price_usd%></p>
-      </h5>
-      <p class="card-text"><%=tea.description%></p>
-        <% if current_user != nil %>
-          <%= button_to "Add Subscription", "/users/#{current_user.id}/subscriptions/add/tea/#{tea.id}" %>
-        <% end %>
+<div class="row row-cols-2 row-cols-md-3">
+    <% @teas.each do |tea|%>
+      <div class="col mb-4">
+        <div class="card border-dark mb-3" style="width: 18rem;">
+          <%= image_tag ("sencha.jpeg"), width: 10, class: "card-img-top" %>
+          <div class="card-body">
+            <h5 class="card-title">
+              <p><%=tea.title%>   |   $<%=tea.price_usd%></p>
+            </h5>
+            <p class="card-text"><%=tea.description%></p>
+              <% if current_user != nil %>
+                <%= button_to "Add Subscription", "/users/#{current_user.id}/subscriptions/add/tea/#{tea.id}" %>
+              <% end %>
+          </div>
+        </div>
     </div>
-  </div>
-<% end %>
-
+    <% end %>
+</div>
 
 
   </body>
