Add alert and nav bar styling

--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -12,8 +12,8 @@
       margin-top: 50px;
     }
 
-    .tea-title {
-      margin-top: 300px;
+    .text-center {
+      margin-top: 250px;
     }
   </style>
 
@@ -21,49 +21,39 @@
   <body>
     <div class="home-pic"></div>  
 
-    <%# <h1 class="header"> Welcome To Tea Time! </h1> %>
+
     
-    
+
   
-    <%# <%= button_to "Enter", "/teas", method: :get, :class => "btn btn-primary" %>
-    
 
-<%= link_to "Home", "/", method: :get, class: "text-decoration-none" %>
-<%= link_to "Teas", teas_path, method: :get, class: "text-decoration-none" %> 
+    <center>
+      <h1 class="text-center"> 
+        Pick from our fields 
+      </h1>
+    </center>
 
- <% if current_user != nil%>
-  <%= link_to "My Subscriptions", "/users/#{current_user.id}/subscriptions", method: :get, class: "text-decoration-none"  %>
-<% end %>
-
-
-  <% if logged_in? %>
-    <%= link_to "Logout", sessions_path, method: :delete, class: "text-decoration-none"  %>
-  <% else %>
-    <%= link_to "Log In", sessions_path, method: :new, class: "text-decoration-none"  %>
-  <% end %>
-
-    <%= link_to "Sign Up", "users/new", method: :get, class: "text-decoration-none"  %>
-
-    <h1 class="tea-title"> Teas Selection! </h1>
-
-<div class="row row-cols-2 row-cols-md-3">
-    <% @teas.each do |tea|%>
-      <div class="col mb-4">
-        <div class="card border-dark mb-3" style="width: 18rem;">
-          <%= image_tag ("sencha.jpeg"), width: 10, class: "card-img-top" %>
-          <div class="card-body">
-            <h5 class="card-title">
-              <p><%=tea.title%>   |   $<%=tea.price_usd%></p>
-            </h5>
-            <p class="card-text"><%=tea.description%></p>
-              <% if current_user != nil %>
-                <%= button_to "Add Subscription", "/users/#{current_user.id}/subscriptions/add/tea/#{tea.id}" %>
-              <% end %>
+  <center>
+    <div class="row row-cols-2 row-cols-md-3">
+          <% @teas.each do |tea|%>
+            <div class="col mb-4">
+              <div class="card border-dark mb-3" style="width: 18rem;">
+                <%= image_tag ("sencha.jpeg"), width: 10, class: "card-img-top" %>
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <p><%=tea.title%>   |   $<%=tea.price_usd%></p>
+                  </h5>
+                  <p class="card-text"><%=tea.description%></p>
+                    <% if current_user != nil %>
+                      <%= button_to "Add Subscription", "/users/#{current_user.id}/subscriptions/add/tea/#{tea.id}" %>
+                    <% else %>
+                      <p> Log in to Subscribe</p>
+                    <% end %>
+                </div>
+              </div>
           </div>
-        </div>
+        <% end %>
     </div>
-    <% end %>
-</div>
+  </center>
 
 
   </body>
