--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,34 @@
   </head>
 
   <body>
-   <% flash.each do |type, msg| %>
-      <div style="color:purple;font-weight:bold;">
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to "Home", "/", method: :get, class: "text-decoration-none", class: "nav-link active" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Teas", teas_path, method: :get, class: "nav-link active" %>
+      </li>
+      <li class="nav-item">
+        <% if current_user != nil%>
+          <%= link_to "My Subscriptions", "/users/#{current_user.id}/subscriptions", method: :get, class: "nav-link active" %>
+        <% end %>
+      </li>
+      <li class="nav-item">
+          <% if logged_in? %>
+            <%= link_to "Logout", sessions_path, method: :delete, class: "nav-link active"  %>
+          <% else %>
+            <%= link_to "Log In", sessions_path, method: :new, class: "nav-link active"  %> 
+          <% end %>
+      </li>
+      <li class="nav-item">
+          <% if !logged_in? %>
+           <%= link_to "Sign Up", "users/new", method: :get, class: "nav-link active"  %>
+          <% end %>
+      </li>
+    </ul>
+
+    <% flash.each do |type, msg| %>
+      <div class="alert alert-success" role="alert">
         <%= msg %>
       </div>
     <% end %>
