--- a/app/views/teas/index.html.erb
+++ b/app/views/teas/index.html.erb
@@ -1,4 +1,4 @@
-  <% if logged_in? %>
+  <!--<% if logged_in? %>
       <%= link_to "Logout", sessions_path, method: :delete %>
     <% else %>
       <%= form_tag sessions_path do %>
@@ -12,11 +12,13 @@
   <% end %>
 
 
+
 <%= link_to "Teas", teas_path, method: :get %> 
 
  <% if current_user != nil%>
   <%= link_to "My Subscriptions", "/users/#{current_user.id}/subscriptions", method: :get %>
 <% end %>
+  -->
 
 <h1> Teas Selection! </h1>
 <div class="container">
