--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -36,15 +36,14 @@
     <div class="row row-cols-2 row-cols-md-3">
           <% @teas.each do |tea|%>
             <div class="col mb-4">
-              <div class="card border-dark mb-3" style="width: 10rem; height: 20rem;">
-                <%= image_tag ("#{tea.image.name}"), width: 10, class: "card-img-top" %>
+              <div class="card border-dark mb-3" style="width: 10rem; height: 17rem;">
+                <%= image_tag ("#{tea.images.first}"), width: 10, class: "card-img-top" %>
                 <div class="card-body">
                   <h5 class="card-title" style="font-size: 12px;">
-                    <p><%=tea.title%>  |  $<%=tea.price_usd%></p>
+                    <p><%=tea.name%>  |  $<%=tea.price%></p>
                   </h5>
                   <p class="card-text"></p>
-                      <%= button_to "Subscribe", payments_create_path, method: :post %>
-                    
+                      <%= button_to "Subscribe", "/payments/create/#{tea.id}", method: :post %>
                 </div>
               </div>
           </div>
