--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,53 @@
+<style>
+.login-form {
+    width: 340px;
+    margin: 50px auto;
+  	font-size: 15px;
+}
+.login-form form {
+    margin-bottom: 15px;
+    background: #f7f7f7;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    padding: 30px;
+}
+.login-form h2 {
+    margin: 0 0 15px;
+}
+.form-control, .btn {
+    min-height: 38px;
+    border-radius: 2px;
+}
+.btn {        
+    font-size: 15px;
+    font-weight: bold;
+}
+</style>
+<h2 style="text-align: center;
+    margin-bottom: 20px;
+    margin-top: 5px;
+    font-family: Arial;">
+    Sign Up Below
+</h2>
 
-  <%= form_for @user do |f| %>
-    <%= f.label :email %>
-    <%= f.text_field :email, placeholder: "email" %><br>
-    <%= f.label :password %>
-    <%= f.password_field :password, placeholder: "Password" %><br>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, placeholder: "Confirm Password" %><br>
-    <%= f.submit "Create Account" %>
-  <% end %>
+
+  <div class="login-form">  
+      <%= form_for @user do |f| %>
+          <div class="form-group">
+            <%= f.label :email%><br>
+            <%= f.text_field :email %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password %><br>
+            <%= f.password_field :password %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password_confirmation %><br>
+            <%= f.password_field :password_confirmation %>
+          </div>
+          <div  class="float-right">
+              <%= submit_tag "Sign Up"%>
+          </div>
+        <% end %>
+      </form>
+  </div>
+
