--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -13,6 +13,7 @@
       margin-top: 50px;
       margin-bottom: 110px;
     }
+    
   </style>
 
   <body>
@@ -25,8 +26,8 @@
       </h1>
     
 
-    <div class="container text-center justify-content-center">
-      <div class="row row-cols-2 row-cols-md-3">
+    <div class="container text-center">
+      <div class="row row-cols-2 row-cols-md-3 justify-content-center">
             <% @teas.each do |tea|%>
               <div class="col mb-4 ">
                 <div class="card border-dark mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
@@ -47,6 +48,7 @@
           <% end %>
       </div>
     </div>
+
 
 
   </body>
