Add basic cart functionality

--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -37,10 +37,14 @@
                       <p><%=tea.name%>  |  $<%=tea.price%></p>
                     </h5>
                     <p class="card-text" style="font-size: 15px; margin-bottom: 1px;"><%= tea.description%></p>
-                      <% if current_user.present? == true%>
-                        <%= button_to "Subscribe", "/payments/create/#{tea.id}", method: :post %>
+                      <% if current_user.present? == true %>
+                        <% if  @cart.include?(tea.id) %>
+                          <%= button_to "Remove from cart", remove_from_cart_path(tea.id), method: :delete %>
+                        <% else %>
+                          <%= button_to "Add to cart", add_to_cart_path(tea.id), method: :post %>
+                        <% end %>
                       <% else %>
-                        <%= button_to "Subscribe", signup_path, method: :get %>
+                          <%= button_to "Sign up", signup_path, method: :get %>
                       <% end %>
                   </div>
                 </div>
