--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         </li>
         <li class="nav-item">
             <% if logged_in? %>
-              <%= link_to "Cart", "carts", method: :get, class: "nav-link active"  %>
+              <%= link_to "Cart", "/carts", method: :get, class: "nav-link active"  %>
             <% end %>
         </li>
         <li class="nav-item">
