--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -31,17 +31,17 @@
             <% @teas.each do |tea|%>
               <div class="col mb-4 ">
                 <div class="card border-dark mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
-                  <%= image_tag ("#{tea.images.first}"), class: "card-img-top", style: "height: auto; width: auto" %>
+                  <%= image_tag ("#{tea.image}"), class: "card-img-top", style: "height: auto; width: auto" %>
                   <div class="card-body">
                     <h5 class="card-title" style="font-size: 18px;">
                       <p><%=tea.name%>  |  $<%=tea.price%></p>
                     </h5>
                     <p class="card-text" style="font-size: 15px; margin-bottom: 1px;"><%= tea.description%></p>
                       <% if current_user.present? == true %>
-                        <% if  @cart.include?(tea.id) %>
-                          <%= button_to "Remove from cart", remove_from_cart_path(tea.id), method: :delete %>
+                        <% if  @cart.include?(tea.stripe_product_id) %>
+                          <%= button_to "Remove from cart", remove_from_cart_path(tea.stripe_product_id), method: :delete %>
                         <% else %>
-                          <%= button_to "Add to cart", add_to_cart_path(tea.id), method: :post %>
+                          <%= button_to "Add to cart", add_to_cart_path(tea.stripe_product_id), method: :post %>
                         <% end %>
                       <% else %>
                           <%= button_to "Sign up", signup_path, method: :get %>
