--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -3,9 +3,10 @@
   <style>
     .header {
       text-align: center;
-       margin: 0;
-        top: 33%;
+      margin: 0;
+      top: 33%;
     }
+
     .tea-container {
       margin-top: 20px;
     }
@@ -13,6 +14,9 @@
       margin-top: 50px;
       margin-bottom: 110px;
     }
+    /* .d-flex {
+      margin-left: 10%;
+    } */
     
   </style>
 
@@ -22,21 +26,22 @@
 
     
       <h1 class="text-center"> 
-        Pick from our fields 
+
       </h1>
     
 
-    <div class="container text-center">
-      <div class="row row-cols-2 row-cols-md-3 justify-content-center">
+
+    <div class="container-fluid">
+      <div class="row row-cols-2 row-cols-md-3">
             <% @teas.each do |tea|%>
-              <div class="col mb-4 ">
+              <div class="col mb-4 d-flex flex-direction-column justify-content-center">
                 <div class="card border-dark mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
                   <%= image_tag ("#{tea.image}"), class: "card-img-top", style: "height: auto; width: auto" %>
-                  <div class="card-body">
+                  <div class="card-body d-flex align-items-center flex-column ">
                     <h5 class="card-title" style="font-size: 18px;">
                       <p><%=tea.name%>  |  $<%=tea.price%></p>
                     </h5>
-                    <p class="card-text" style="font-size: 15px; margin-bottom: 1px;"><%= tea.description%></p>
+                    <p class="card-text d-flex flex-direction-row align-text-center" style="font-size: 15px; margin-bottom: 1px;"><%= tea.description%></p>
                       <% if current_user.present? == true %>
                         <% if  @cart.include?(tea.stripe_product_id) %>
                           <%= button_to "Remove from cart", remove_from_cart_path(tea.stripe_product_id), method: :delete %>
@@ -52,6 +57,7 @@
           <% end %>
       </div>
     </div>
+
 
 
 
