--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -38,10 +38,10 @@
                 <div class="card border-dark mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
                   <%= image_tag ("#{tea.image}"), class: "card-img-top", style: "height: auto; width: auto" %>
                   <div class="card-body d-flex align-items-center flex-column ">
-                    <h5 class="card-title" style="font-size: 18px;">
+                    <h5 class="card-title d-flex align-items-center flex-column " style="font-size: 18px;">
                       <p><%=tea.name%>  |  $<%=tea.price%></p>
+                      <p class="card-text d-flex align-items-center flex-column" style="font-size: 15px; margin-bottom: 1px;"><%= tea.description%></p>
                     </h5>
-                    <p class="card-text d-flex flex-direction-row align-text-center" style="font-size: 15px; margin-bottom: 1px;"><%= tea.description%></p>
                       <% if current_user.present? == true %>
                         <% if  @cart.include?(tea.stripe_product_id) %>
                           <%= button_to "Remove from cart", remove_from_cart_path(tea.stripe_product_id), method: :delete %>
