--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -5,11 +5,8 @@
       width: 60vw;
       margin-left: 20vw;
     }
-    .buy-button {
-      margin-left: 75vw;
-      background-color: #f8f9fa;
-      border-style: none;
-      transition: opacity .15s;
+    .btn.btn-warning {
+      width: 100%; 
     }
  
   </style>
