--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -42,11 +42,15 @@
                 </div>
               </div>
               <% end %>
+              <%if @cart.empty? == false%>
               <div class="card">
                 <div class="card-body">
-                  <%= button_to "Buy now", "/payments/create", local: true, class: "btn btn-warning btn-lg btn-block", type: "button" %>
+                    <%= button_to "Buy now", "/payments/create", local: true, class: "btn btn-warning btn-lg btn-block", type: "button" %>
                 </div>
               </div>
+              <%else%>
+                <p>Your Cart is empty</p>
+              <%end%>
             </div>
           </div>
         </div>
