Add nav bar styling so links are easier to read

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
   </head>
 
   <body>
-  
-    <div class="container-fluid">
+
+    <div class="bg-white border-bottom border-dark container-fluid">
       <ul class="nav">
         <li class="nav-item">
           <%= link_to "Home", "/", method: :get, class: "nav-link active" %>
