remove bootstrap etc

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,8 +13,8 @@
  */
 
  
- @import "bootstrap/scss/bootstrap";
- @import "**/*";
+ @import "bootstrap";
+
  
  .home-pic {
   background-image: url(tea_field.jpg);
