--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -6,13 +6,14 @@
       flex-direction: column-reverse;
       align-items: flex-end;
     }
-
+  
     .user-icons {
-      font-size: 2em;
+      font-size: 7em;
     }
 
     i {
-      margin-right: 1em;
+      margin-right: .25em;
+      font-size: 2em;
     }
 
   </style>
