--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -15,6 +15,10 @@
       margin-top: 50px;
       margin-bottom: 110px;
     } 
+
+    .my-custom-spacing-class {
+      margin-bottom: 2000px; /* Adjust the value to control the spacing */
+    }
     
   </style>
 
@@ -28,9 +32,9 @@
     
 
     <div class="container-fluid">
-      <div class="row row-cols-2 row-cols-md-3">
+      <div class="row row-cols-2 row-cols-md-3 ">
             <% @teas.each do |tea|%>
-              <div class="col mb-4 d-flex flex-direction-column justify-content-center">
+              <div class="col mb-4 d-flex flex-direction-column justify-content-center" >
                 <div class="card border-dark mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
                   <%= image_tag ("#{tea.image}"), class: "card-img-top", style: "height: auto; width: auto" %>
                   <div class="card-body d-flex align-items-center flex-column ">
