--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -29,6 +29,7 @@
               <div class="user-icons d-flex mb-2">
 
                 <%= button_to "<i class='bi bi-house'></i>Home ".html_safe, root_path, method: :get, class: "btn outline-dark", form: { method: 'get' } %>
+                <%= button_to "<i class='bi bi-cup-hot'></i>Tea Fun ".html_safe, "/info", method: :get, class: "btn outline-dark", form: { method: 'get' } %>
                 <%= button_to "<i class='bi bi-cart'></i>Cart ".html_safe, carts_path, method: :get, class: "btn outline-dark", form: { method: 'get' } %>
                 
                 <% if logged_in? %>
