--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -16,10 +16,7 @@
       margin-bottom: 110px;
     } 
 
-    .my-custom-spacing-class {
-      margin-bottom: 2000px; /* Adjust the value to control the spacing */
-    }
-    
+
   </style>
 
   <body>
@@ -36,7 +33,7 @@
             <% @teas.each do |tea|%>
               <div class="col mb-4 d-flex flex-direction-column justify-content-center" >
                 <div class="card border-dark mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
-                  <%= image_tag ("#{tea.image}"), class: "card-img-top", style: "height: auto; width: auto" %>
+                  <%= image_tag ("#{tea.image}"), class: "card-img-top", style: "height: 60rem; width: auto" %>
                   <div class="card-body d-flex align-items-center flex-column ">
                     <h5 class="card-title d-flex align-items-center flex-column " style="font-size: 18px;">
                       <p><%=tea.name%>  |  <%=MoneyPresenter.new(tea).format_price%></p>
