--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -36,7 +36,7 @@
                       <p><span class="text-muted"><%= item.first.description%> </span></p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h5 class="mb-0">$<%= item.first.price%></h5>
+                      <h5 class="mb-0"><%= MoneyPresenter.new(item.first).format_price%></h5>
                     </div>
                   </div>
                 </div>
