--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   
-  <title>TeaTimeFe</title>
+  <title>TeaTime</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
