--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -23,7 +23,7 @@
     
       <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-          <%= image_tag("ttlogo.jpg", style: "height: 6rem;  width: auto;") %>
+          <a href="/"> <%= image_tag("ttlogo.jpg", style: "height: 6rem;  width: auto;") %></a>
             <div class="navbar-right">
             
               <div class="user-icons d-flex mb-2">
