--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -19,9 +19,7 @@
         <div class="container h-100 py-5">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-10">
-              <div class="d-flex justify-content-between align-items-center mb-4">
-                <h3 class="fw-normal mb-0 text-black">My Cart</h3>
-              </div>
+              
               <% @cart_items.each do |item| %>  
               <div class="card rounded-3 mb-4">
                 <div class="card-body p-4">
@@ -53,7 +51,13 @@
                 </div>
               </div>
               <%else%>
-                <p>Your Cart is empty</p>
+
+                <div class="card rounded-3 mb-4">
+                  <div class="card-body p-4">
+                    <p>Your Cart is empty</p>
+                  </div>
+                </div>
+
               <%end%>
             </div>
           </div>
