--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -35,6 +35,7 @@
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
                       <h5 class="mb-0"><%= MoneyPresenter.new(item.first).format_price%></h5>
+                      <%= button_to "Remove", remove_from_cart_path(item.first.stripe_product_id), method: :delete, class: " btn btn-outline-dark" %>
                     </div>
                   </div>
                 </div>
@@ -54,7 +55,7 @@
 
                 <div class="card rounded-3 mb-4">
                   <div class="card-body p-4">
-                    <p>Your Cart is empty</p>
+                    <p >Your Cart is empty   <i class="bi bi-emoji-frown"></i></p>
                   </div>
                 </div>
 
