update readme and tea info button

--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -43,7 +43,7 @@
 
 
                 <%= button_to "<i class='bi bi-house'></i>Home ".html_safe, root_path, method: :get, class: "btn outline-dark", form: { method: 'get' } %>
-                <%= button_to "<i class='bi bi-cup-hot'></i>Tea Fun ".html_safe, "/info", method: :get, class: "btn outline-dark", form: { method: 'get' } %>
+                <%= button_to "<i class='bi bi-cup-hot'></i>Tea Info ".html_safe, "/info", method: :get, class: "btn outline-dark", form: { method: 'get' } %>
                 <%= button_to "<i class='bi bi-cart'></i>Cart ".html_safe, carts_path, method: :get, class: "btn outline-dark", form: { method: 'get' } %>
                   
 
