Add colored scroll bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,22 @@
   </head>
 
   <style> 
-    .nav .nav-item .nav-link.active {
-      color: black;
+     ::-webkit-scrollbar{
+        height: 4px;
+        width: 10px;
+        background: #eeeeee;
     }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background: #86A036;
+    }
+
+    ::-webkit-scrollbar-track {
+      border-radius: 0;
+      background: #eeeeee;
+    }
+
   </style>
 
   <body>
