--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -28,6 +28,15 @@
       margin-left: -40px;
 
     }
+    .btn {
+      // background: #86A036;
+    }
+    .logo img:hover {
+      opacity: .5;
+    }
+    .btn:hover {
+      opacity: .6;
+    }
 
   </style>
 
@@ -36,7 +45,9 @@
     
       <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-          <a href="/"> <%= image_tag("ttlogo.jpg", style: "height: 6rem;  width: auto;") %></a>
+          <div class="logo">
+            <a href="/"> <%= image_tag("ttlogo.jpg", style: "height: 6rem;  width: auto;") %></a>
+          </div>
             <div class="navbar-right">
             
               <div class="user-icons d-flex mb-2">
