--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -36,7 +36,7 @@
       <div class="row row-cols-2 row-cols-md-3 ">
             <% @teas.each do |tea|%>
               <div class="col mb-4 d-flex flex-direction-column justify-content-center" >
-                <div class="card border-dark mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
+                <div class="card mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
                   <%= image_tag ("#{tea.image}"), class: "card-img-top", style: "height: 60rem; width: auto" %>
                   <div class="card-body d-flex align-items-center flex-column ">
                     <h5 class="card-title d-flex align-items-center flex-column " style="font-size: 18px;">
