--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
     ::-webkit-scrollbar-thumb {
       border-radius: 10px;
-      background: #86A036;
+      background: #A1E027;
     }
 
     ::-webkit-scrollbar-track {
