Add custom styling for card sizes and alerts for desktop and mobile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,20 @@
 
     .alert {
       text-align: center;
-      font-size: 1vw;
     }
+    
+    @media (max-width: 768px) {
+      .alert {
+        font-size: 4vw; 
+      }
+    }
+
+    @media (min-width: 1200px) {
+    .alert {
+      font-size: 1.2vw;
+      }
+    }
+
   </style>
 
   <body>
