--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
   <style>
+    @media (max-width: 768px) {
+        .card.mb-3 {
+          height: 25rem; 
+        }
+      }
+    @media (min-width: 1200px) {
+    .card.mb-3 {
+      height: 30rem; 
+      width: 20rem; 
+      }
+    }
+
     .header {
       text-align: center;
       margin: 0;
@@ -21,6 +33,11 @@
       color: black;
     }
 
+    .card-body {
+      display: flex;
+      justify-content: flex-end;
+    }
+
   </style>
 
   <body>
@@ -35,16 +52,15 @@
     <div class="container-fluid">
       <div class="row row-cols-2 row-cols-md-3 ">
             <% @teas.each do |tea|%>
-              <div class="col mb-4 d-flex flex-direction-column justify-content-center" >
-                <div class="card mb-3 shadow-lg bg-white rounded" style="width: 18rem; height: 28rem;">
-                  <%= image_tag ("#{tea.image}"), class: "card-img-top", style: "height: 60rem; width: auto" %>
+              <div class="col mb-4 d-flex justify-content-center" >
+                <div class="card mb-3 shadow-lg bg-white rounded">
+                  <%= image_tag ("#{tea.image}"), class: "card-img-top img-fluid" %>
                   <div class="card-body d-flex align-items-center flex-column ">
                     <h5 class="card-title d-flex align-items-center flex-column " style="font-size: 18px;">
                       <p><%=tea.name%>  |  <%=MoneyPresenter.new(tea).format_price%></p>
-                      <p class="card-text d-flex align-items-center flex-column" style="font-size: 15px; margin-bottom: 1px;"><%= tea.description%></p>
+                      <p class="card-text d-flex align-items-center flex-column" style="font-size: 15px;"><%= tea.description%></p>
                     </h5>
-                          <%= button_to "Add to cart", add_to_cart_path(tea.stripe_product_id), method: :post, class: " btn btn-outline-dark"  %>
-                       
+                      <%= button_to "Add to cart", add_to_cart_path(tea.stripe_product_id), method: :post, class: " btn btn-outline-dark" %>
                   </div>
                 </div>
             </div>
